<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:weightSum="4"
    android:padding="16dp"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.SettingsActivity">

    <LinearLayout
        android:padding="16dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="22sp"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/alarm_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="NestedWeights" />

        <TextView
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            android:paddingHorizontal="24dp"
            android:text="@string/notif_message_detail"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/non_active"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:text="@string/non_active"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/active"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:text="@string/apply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</LinearLayout>